--- a/assets/scss/pages/_htcTouch.scss
+++ b/assets/scss/pages/_htcTouch.scss
@@ -473,9 +473,9 @@
    
   }
   .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev {
-    width: 34px;
+    width: 38px;
     border-radius: 50%;
-    background: red;
+    background:  #eb4d4b;
     color: white;
     border: none;
     padding: 0!important;
