--- a/assets/scss/pages/_collections.scss
+++ b/assets/scss/pages/_collections.scss
@@ -228,26 +228,27 @@
     .right {
       .device {
         padding: 0px;
-        height: 270px;
+       
         position: relative;
-
         .image {
-          height: 100%;
+          height: 270px;
           position: relative;
-          img {
+          a{
             width: 100%;
-            height: 100%;
-          }
-
-          .first {
-            position: absolute;
-            opacity: 1;
-            transition: 1s all;
-          }
-          .second {
-            position: absolute;
-            opacity: 0;
-            transition: 1s all;
+            .first {
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              opacity: 1;
+              transition: 1s all;
+            }
+            .second {
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              opacity: 0;
+              transition: 1s all;
+            }
           }
           &:hover {
             .first {
@@ -263,7 +264,7 @@
         }
         .rating {
           position: absolute;
-          bottom: 8px;
+          bottom: 103px;
           left: 50%;
           transform: translateX(-50%);
           .yellow {
@@ -274,7 +275,7 @@
           position: absolute;
           left: auto;
           right: 13px;
-          top: -36px;
+          top: 0px;
           display: block;
           .allbutton {
             border: 1px solid black;
@@ -306,11 +307,11 @@
             position: absolute;
             left: 50%;
             transform: translate(-50%);
-            bottom: -62px;
+            bottom:20px;
             transition: 0.5s all;
             overflow: hidden;
             opacity: 0;
-            height: 0;
+            height: 0px;
             width: 120px;
             cursor: pointer;
           }
