--- a/assets/scss/pages/_clipboard.scss
+++ b/assets/scss/pages/_clipboard.scss
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       ul {
-        .li {
+        li {
           font-size: 14px;
           a {
             transition: 0.5s;
