--- a/assets/scss/pages/_header.scss
+++ b/assets/scss/pages/_header.scss
@@ -479,9 +479,10 @@ header {
   .back{
     width: 100%;
     height: 100vh;
+    display: none;
   }
   .back.active{
     background-color: rgba(122, 120, 120, 0.575);
-
+    display: block;
   }
 }
