--- a/assets/scss/pages/_footer.scss
+++ b/assets/scss/pages/_footer.scss
@@ -1,19 +1,190 @@
 footer {
-    background-color: rgb(242, 246, 249);
-    padding: 65px 0 0 0;
+  background-color: rgb(242, 246, 249);
+  padding: 65px 0 0 0;
+  .contact {
+    padding: 40px 20px;
+    border: 1px solid rgba(102, 102, 102, 0.15);
+    text-align: center;
+    .footer_contact {
+      font-weight: 500;
+      font-size: 16px;
+      color: #eb4d4b;
+      letter-spacing: 6px;
+    }
+    h2 {
+      font-size: 42px;
+    }
+    p {
+      margin-bottom: 28px;
+      width: 80px;
+      height: 4px;
+      background-color: #eb4d4b;
+      text-align: center;
+      display: inline-block;
+    }
+    form {
+      .right {
+        text-align: center;
+        display: inline-block;
+        width: 46%;
+        height: 45px;
+        margin-bottom: 37px;
+        border-radius: 15px;
+        border: none;
+      }
+    }
+    .left {
+      text-align: center;
+      display: inline-block;
+      width: 44%;
+      height: 45px;
+      border-radius: 15px;
+      border: none;
+      &::placeholder {
+        padding: 10px 8px;
+      }
+    }
+    .form_text {
+      margin-top: 20px;
+      border: none;
+      width: 92%;
+      border-radius: 15px;
+      height: 140px;
+      &::placeholder {
+        padding: 10px 16px;
+      }
+    }
+    .message {
+      width: 32%;
+      margin: 15px 0 0 0;
+      border: none;
+      border-radius: 30px;
+      height: 50px;
+      font-size: 14px;
+      font-weight: 400;
+      background-color: #eb4d4b;
+      padding-top: 13px;
+
+      transition: 0.5s;
+      &:hover {
+        background-color: black;
+      }
+    }
+  }
+
+  .subs {
+    padding: 42px 21px;
+    border: 1px solid rgba(102, 102, 102, 0.15);
+    text-align: center;
+    .text {
+      .subs_span {
+        font-weight: 500;
+        font-size: 16px;
+        color: #eb4d4b;
+      }
+      h2 {
+        font-size: 42px;
+
+        font-weight: 700;
+      }
+      .other {
+        margin-top: 10px;
+        margin-bottom: 20px;
+        width: 80px;
+        height: 4px;
+        background-color: #eb4d4b;
+        text-align: center;
+        display: inline-block;
+      }
+    }
+    .icon_text_ {
+      line-height: 30px;
+      i {
+        font-size: 50px;
+        color: #eb4d4b;
+      }
+      h2 {
+        margin-top: 10px;
+        font-size: 22px;
+        font-weight: 600;
+      }
+      p {
+        font-size: 16px;
+        color: #666;
+        font-weight: 400;
+      }
+    }
+    .input_email {
+      position: relative;
+      .email {
+        height: 50px;
+        border-radius: 30px;
+        border: 1px solid #e5e5e5;
+        width: 80%;
+
+        &::placeholder {
+          padding: 10px;
+        }
+      }
+      .subs_btn {
+        position: absolute;
+        right: 34px;
+        top: 0px;
+        background-color: #eb4d4b;
+        border-radius: 41px;
+        width: 30%;
+        padding: 7px;
+        height: 47px;
+        color: white;
+     
+      }
+    }
+    .icons_social {
+      ul {
+        margin-top: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        li {
+          margin-left: 10px;
+          list-style-type: none;
+
+          a {
+            margin-left: 5px;
+            text-decoration: none;
+            .icons {
+              width: 50px;
+              height: 50px;
+              img {
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                &:hover {
+                  color: #eb4d4b;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  
+  @media  screen and (max-width: 391px) {
     .contact {
       padding: 40px 20px;
       border: 1px solid rgba(102, 102, 102, 0.15);
       text-align: center;
-      .footer_contact {
+      span {
         font-weight: 500;
         font-size: 16px;
         color: #eb4d4b;
         letter-spacing: 6px;
-      
       }
       h2 {
         font-size: 42px;
+        font-weight: 700;
       }
       p {
         margin-bottom: 28px;
@@ -22,76 +193,65 @@ footer {
         background-color: #eb4d4b;
         text-align: center;
         display: inline-block;
-        
       }
       form {
-        .right {
-          text-align: center;
+        input {
           display: inline-block;
-          width: 46%;
+          width: 44%;
           height: 45px;
-          margin-bottom: 37px;
           border-radius: 15px;
           border: none;
+          &::placeholder {
+            padding: 10px 8px;
+          }
         }
-      }
-      .left {
-        text-align: center;
-        display: inline-block;
-        width: 44%;
-        height: 45px;
-        border-radius: 15px;
-        border: none;
-        &::placeholder {
-          padding: 10px 8px;
-      
+        .leftInp {
+          margin-left: 32px;
         }
-      }
-      .form_text {
-        margin-top: 20px;
-        border: none;
-        width: 92%;
-        border-radius: 15px;
-        height: 140px;
-        &::placeholder {
-          padding: 10px 16px;
-          
+        textarea {
+          margin-top: 20px;
+          border: none;
+          width: 100%;
+          border-radius: 15px;
+          height: 140px;
+          &::placeholder {
+            padding: 10px 16px;
+          }
         }
-      }
-      .message {
-        width: 24%;
-        margin: 15px 0 0 0;
-        border: none;
-        border-radius: 30px;
-        height: 50px;
-        font-size: 14px;
-        font-weight: 400;
-        background-color: #eb4d4b;
-        padding-top: 4px;
-  
-        transition: 0.5s;
-        &:hover {
-          background-color: black;
+        .button {
+          width: 41%;
+          margin: 15px 0 0 0;
+          border: none;
+          border-radius: 30px;
+          height: 50px;
+          font-size: 14px;
+          font-weight: 400;
+          background-color: #eb4d4b;
+          padding-top: 14px;
+          transition: 0.5s;
+          &:hover {
+            background-color: black;
+          }
         }
       }
     }
-  
-    .subs {
-      padding: 42px 21px;
+    .subscrib {
+      padding: 30px 10px 30px;
       border: 1px solid rgba(102, 102, 102, 0.15);
       text-align: center;
       .text {
-        .subs_span {
+        span {
           font-weight: 500;
           font-size: 16px;
           color: #eb4d4b;
+          letter-spacing: 6px;
         }
         h2 {
           font-size: 42px;
-   
+
           font-weight: 700;
         }
-        .other {
+        p {
           margin-top: 10px;
           margin-bottom: 20px;
           width: 80px;
@@ -99,10 +259,9 @@ footer {
           background-color: #eb4d4b;
           text-align: center;
           display: inline-block;
-   
         }
       }
-      .icon_text_ {
+      .icon-text {
         line-height: 30px;
         i {
           font-size: 50px;
@@ -112,62 +271,79 @@ footer {
           margin-top: 10px;
           font-size: 22px;
           font-weight: 600;
-      
         }
         p {
           font-size: 16px;
           color: #666;
           font-weight: 400;
- 
         }
       }
-      .input_email {
+      .inp {
         position: relative;
-        .email {
+        input {
           height: 50px;
           border-radius: 30px;
           border: 1px solid #e5e5e5;
           width: 80%;
-  
+
           &::placeholder {
             padding: 10px;
           }
         }
-        .subs_btn {
+        .button {
           position: absolute;
-          right: 54px;
-          top: 0px;
+          right: 39px;
+          top: 4px;
           background-color: #eb4d4b;
           border-radius: 41px;
-          width: 22%;
-          height: 49px;
+          width: 28%;
+          height: 42px;
           color: white;
         }
       }
-      .icons_social {
-        ul {
-          margin-top: 25px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-  
-          li {
-            margin-left: 10px;
-            list-style-type: none;
-  
-            a {
-              margin-left: 5px;
-              text-decoration: none;
-              .icons {
-                width: 50px;
-                height: 50px;
-                img {
-                  width: 100%;
-                  height: 100%;
-                  border-radius: 50%;
-                  &:hover {
-                    color: #eb4d4b;
-                  }
+    }
+  }
+  .footer_text_ {
+    padding-bottom: 33px;
+    position: relative;
+    top: 20px;
+    font-size: 15px;
+    .footer_text_up,
+    .footer_text_down {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      li {
+        list-style-type: none;
+        margin-right: 20px;
+
+        a {
+          text-decoration: none;
+          color: gray;
+        }
+      }
+      .line {
+        width: 1px;
+        height: 15px;
+        background-color: gray;
+        position: relative;
+        right: 10px;
+      }
+    }
+  }
+  .footer_end_ {
+    display: none;
+    .accordion {
+      .accordion-item {
+        .first_accordion {
+          .accordion_body {
+            .accordion_ul {
+              padding: 0;
+              li {
+                list-style-type: none;
+                a {
+                  text-decoration: none;
+                  color: gray;
                 }
               }
             }
@@ -175,163 +351,28 @@ footer {
         }
       }
     }
-    @media only screen and (max-width: 391px) {
-      .contact {
-        padding: 40px 20px;
-        border: 1px solid rgba(102, 102, 102, 0.15);
-        text-align: center;
-        span {
-          font-weight: 500;
-          font-size: 16px;
-          color: #eb4d4b;
-          letter-spacing: 6px;
-        
-        }
-        h2 {
-          font-size: 42px;
-          
-          font-weight: 700;
-        }
-        p {
-          margin-bottom: 28px;
-          width: 80px;
-          height: 4px;
-          background-color: #eb4d4b;
-          text-align: center;
-          display: inline-block;
-       
-        }
-        form {
-          input {
-            display: inline-block;
-            width: 44%;
-            height: 45px;
-            border-radius: 15px;
-            border: none;
-            &::placeholder {
-              padding: 10px 8px;
-            }
-          }
-          .leftInp {
-            margin-left: 32px;
-          }
-          textarea {
-            margin-top: 20px;
-            border: none;
-            width: 100%;
-            border-radius: 15px;
-            height: 140px;
-            &::placeholder {
-              padding: 10px 16px;
-            }
-          }
-          .button {
-            width: 41%;
-            margin: 15px 0 0 0;
-            border: none;
-            border-radius: 30px;
-            height: 50px;
-            font-size: 14px;
-            font-weight: 400;
-            background-color: #eb4d4b;
-            padding-top: 14px;
-            transition: 0.5s;
-            &:hover {
-              background-color: black;
-            }
-          }
-        }
-      }
-      .subscrib {
-        padding: 30px 10px 30px;
-        border: 1px solid rgba(102, 102, 102, 0.15);
-        text-align: center;
-        .text {
-          span {
-            font-weight: 500;
-            font-size: 16px;
-            color: #eb4d4b;
-            letter-spacing: 6px;
-            
-          }
-          h2 {
-            font-size: 42px;
-            
-            font-weight: 700;
-          }
-          p {
-            margin-top: 10px;
-            margin-bottom: 20px;
-            width: 80px;
-            height: 4px;
-            background-color: #eb4d4b;
-            text-align: center;
-            display: inline-block;
-           
-          }
-        }
-        .icon-text {
-          line-height: 30px;
-          i {
-            font-size: 50px;
-            color: #eb4d4b;
-          }
-          h2 {
-            margin-top: 10px;
-            font-size: 22px;
-            font-weight: 600;
-    
-          }
-          p {
-            font-size: 16px;
-            color: #666;
-            font-weight: 400;
-    
-          }
-        }
-        .inp {
-          position: relative;
-          input {
-            height: 50px;
-            border-radius: 30px;
-            border: 1px solid #e5e5e5;
-            width: 80%;
-  
-            &::placeholder {
-              padding: 10px;
-            }
-          }
-          .button {
-            position: absolute;
-            right: 39px;
-            top: 4px;
-            background-color: #eb4d4b;
-            border-radius: 41px;
-            width: 28%;
-            height: 42px;
-            color: white;
-          }
-        }
-      }
-    }
-    .footer_text_ {
+  }
+  @media screen and (max-width: 820px) {
+    .text {
+      display: none;
       padding-bottom: 33px;
       position: relative;
       top: 20px;
       font-size: 15px;
-      .footer_text_up,
-      .footer_text_down {
+
+      .textUp,
+      .textDown {
         display: flex;
         justify-content: center;
         align-items: center;
+
         li {
           list-style-type: none;
           margin-right: 20px;
-  
+
           a {
             text-decoration: none;
             color: gray;
-          
           }
         }
         .line {
@@ -343,13 +384,20 @@ footer {
         }
       }
     }
-    .footer_end_ {
-      display: none;
+    .accMd {
+      padding-bottom: 15px;
+      display: block;
       .accordion {
         .accordion-item {
-          .first_accordion {
-            .accordion_body {
-              .accordion_ul {
+          .accordion-header {
+            .accordion-button {
+              background-color: rgb(242, 246, 249);
+            }
+          }
+          .firstAcc {
+            .accBody {
+              background-color: rgb(242, 246, 249);
+              ul {
                 padding: 0;
                 li {
                   list-style-type: none;
@@ -364,110 +412,48 @@ footer {
         }
       }
     }
-    @media only screen and (max-width: 820px) {
-      .text {
-        display: none;
-        padding-bottom: 33px;
-        position: relative;
-        top: 20px;
-        font-size: 15px;
-  
-        .textUp,
-        .textDown {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-  
-          li {
-            list-style-type: none;
-            margin-right: 20px;
-  
-            a {
-              text-decoration: none;
-              color: gray;
-            
-            }
-          }
-          .line {
-            width: 1px;
-            height: 15px;
-            background-color: gray;
-            position: relative;
-            right: 10px;
-          }
-        }
-      }
-      .accMd {
-        padding-bottom: 15px;
-        display: block;
-        .accordion {
-          .accordion-item {
-            .accordion-header {
-              .accordion-button {
-                background-color: rgb(242, 246, 249);
-              }
-            }
-            .firstAcc {
-              .accBody {
-                background-color: rgb(242, 246, 249);
-                ul {
-                  padding: 0;
-                  li {
-                    list-style-type: none;
-                    a {
-                      text-decoration: none;
-                      color: gray;
-                    }
-                  }
-                }
-              }
-            }
+  }
+  .secondFooter {
+    background-color: #151515;
+    .box {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .text-img {
+        p {
+          color: white;
+
+          a {
+            text-decoration: none;
+            color: white;
           }
         }
       }
     }
-    .secondFooter {
-      background-color: #151515;
+   
+    @media only screen and (max-width: 391px) {
       .box {
         padding-top: 10px;
         padding-bottom: 10px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
-  
+        flex-direction: column;
+
         .text-img {
           p {
             color: white;
-  
+
             a {
               text-decoration: none;
               color: white;
-            }
-          }
-        }
-      }
-      @media only screen and (max-width: 820px) {
-      }
-      @media only screen and (max-width: 391px) {
-        .box {
-          padding-top: 10px;
-          padding-bottom: 10px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          flex-direction: column;
-  
-          .text-img {
-            p {
-              color: white;
-  
-              a {
-                text-decoration: none;
-                color: white;
-              }
             }
           }
         }
       }
     }
   }
+}
